--- a/wdae/wdae/gpfjs/static/empty/empty.html
+++ b/wdae/wdae/gpfjs/static/empty/empty.html
@@ -18,7 +18,7 @@
 <body>
     <div _ngcontent-c0="" class="container-fluid" id="logo">
         <div _ngcontent-c0="" class="col-10 align-self-center">
-            <img _ngcontent-c0="" class="ng-tns-c0-0" src="/static/empty/logo-64x64.png">
+            <img _ngcontent-c0="" class="ng-tns-c0-0" src="/static/empty/logo-64x64.png" alt="GPF logo">
             <h3 _ngcontent-c0="" class="ng-tns-c0-0">GPF: Genotypes and Phenotypes in Families</h3>
         </div>
     </div>
